adjust java-api-usage